# pokeapi-rs

./: Cargo.toml  README.md
src/: lib.rs
src/errors/: mod.rs
